--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root" style="background-color: #f485c7"></div>
+  <div id="root" style="background-color: #74bae5"></div>
 
 </body>
 
